--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a herf="#services">Services</a></li>
-                        <li><a herf="#portofolios">Portofolio</a></li>
-                        <li><a herf="#skills">Skills</a></li>
-                        <li><a herf="#contact">Contact</a></li>
-                        <li><a herf="/resume.pdf" target="_blank">
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#portofolios">Portofolio</a></li>
+                        <li><a href="#skills">Skills</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="/resume.pdf" target="_blank">
                                 <button class="btn">
                                     Resume
                                 </button>
