--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <h3 class="pre-title">My name is</h3>
                     <h1 class="hero-name">Muhammad <span>Faris</span></h1>
                     <P>
-                        front-end web developer and mobile apps developer
+                        front-end web developer
                     </P>
                 </div>
                 <div class="hero-right">
@@ -221,10 +221,9 @@
                             <div></div>
                         </div>
                         <div class="education-info">
-                            <h4 class="education-title">Kingston university</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, corrupti ipsam? Assumenda
-                                eum nobis voluptatum quisquam</p>
-                            <h4 class="education-years">2022-2023</h4>
+                            <h4 class="education-title">SMPN 13 Kota Pekalongan</h4>
+                            <p></p>
+                            <h4 class="education-years">2015-2018</h4>
                         </div>
                     </div>
                     <!-- education 2 -->
@@ -233,10 +232,9 @@
                             <div></div>
                         </div>
                         <div class="education-info">
-                            <h4 class="education-title">Kingston university</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, corrupti ipsam? Assumenda
-                                eum nobis voluptatum quisquam</p>
-                            <h4 class="education-years">2022-2023</h4>
+                            <h4 class="education-title">SMAN 3 Kota Pekalongan</h4>
+                            <p>Jurusan - MIPA</p>
+                            <h4 class="education-years">2018-2021</h4>
                         </div>
                     </div>
                     <!-- education 3 -->
@@ -245,16 +243,15 @@
                             <div></div>
                         </div>
                         <div class="education-info">
-                            <h4 class="education-title">Kingston university</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, corrupti ipsam? Assumenda
-                                eum nobis voluptatum quisquam</p>
-                            <h4 class="education-years">2022-2023</h4>
+                            <h4 class="education-title">Politeknik Negeri Semarang</h4>
+                            <p>D3 - Teknik Informatika</p>
+                            <h4 class="education-years">2021-2024</h4>
                         </div>
                     </div>
                 </div>
                 <div class="skills-right">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ducimus delectus reiciendis.
-                        Possimus, laudantium ipsam obcaecati ullam consequatur dolorum aperiam.</p>
+                    <p>selama 2 tahun saya terus belajar tentang front-end web developing dan mendapatkan pengalaman
+                        tentang teknologi dan framework terbaru. dibawah ini adalah keahlian yang saya dalami.</p>
                     <div class="skills-list">
                         <ul>
                             <li>HTML</li>
